Revert "Fixed component help popup breaks in UI, bug #655"
This reverts commit e319eede1f31b6236bacd0393e6cc2927fbe80f0.

--- a/appinventor/appengine/war/Ya.css
+++ b/appinventor/appengine/war/Ya.css
@@ -1030,11 +1030,6 @@ select.ode-PropertyEditor[disabled] {
   color: #8fc202;
 }
 
-.ode-ComponentHelpPopup > .popupContent > table{
-	width: 100%;
-	word-break: break-word;
-}
-
 .compiler-ErrorMarker {
   color: red;
 }
